# website

./: README.md  index.html  stack.yaml  style.css  website.cabal
app/: Main.hs
src/: Logic.hs  Types.hs
src/Interpreter/: JavaScript.hs
