name:                website
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/website#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O -funbox-strict-fields
  exposed-modules:     Logic
                     , Types
                     , Interpreter.JavaScript
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
                     , microlens
                     , mtl
                     , containers
                     , random
  default-language:    Haskell2010

executable website-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O -funbox-strict-fields
  build-depends:       base
                     , microlens
                     , random
                     , website
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/website
